--- a/{{cookiecutter.package_name}}/tox.ini
+++ b/{{cookiecutter.package_name}}/tox.ini
@@ -1,6 +1,23 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = clean,py36,py37,py38,py39,py310,cov_xml
 
 [testenv]
-commands = pytest {{ cookiecutter.package_name }}
-deps = pytest
+# commands = pytest {{ cookiecutter.package_name }}
+commands = pytest --cov={{ cookiecutter.package_name }} --cov-append --cov-report=term-missing tests
+deps =
+  pytest
+  pytest-cov
+
+[testenv:clean]
+deps = 
+  coverage
+skip_install = true
+commands = coverage erase
+
+[testenv:cov_xml]
+deps = 
+  coverage
+skip_install = true
+commands = coverage xml -o coverage.xml
+
+
