--- a/{{cookiecutter.package_name}}/.gitignore
+++ b/{{cookiecutter.package_name}}/.gitignore
@@ -25,6 +25,8 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
+.hypothesis
+coverage.xml
 nosetests.xml
 
 # Translations
@@ -34,3 +36,5 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+workdir
+car-automation.log
