--- a/{{cookiecutter.package_name}}/tox.ini
+++ b/{{cookiecutter.package_name}}/tox.ini
@@ -1,23 +1,32 @@
 [tox]
-envlist = clean,py36,py37,py38,py39,py310,cov_xml
+envlist = py36,py37,py38,py39,py310,coverage,flake8
 
 [testenv]
-# commands = pytest {{ cookiecutter.package_name }}
-commands = pytest --cov={{ cookiecutter.package_name }} --cov-append --cov-report=term-missing tests
+commands = pytest {{ cookiecutter.package_name }}
 deps =
   pytest
-  pytest-cov
 
-[testenv:clean]
+[testenv:coverage]
 deps = 
+  pytest
   coverage
-skip_install = true
-commands = coverage erase
+commands = 
+  coverage run --source={{ cookiecutter.package_name }} -m pytest tests
+  coverage report
+  coverage xml -o coverage.xml
 
-[testenv:cov_xml]
-deps = 
-  coverage
-skip_install = true
-commands = coverage xml -o coverage.xml
+[flake8]
+max-line-length = 119
+accept-encodings = utf-8
+#ignore = E302,I201
 
+[testenv:flake8]
+deps =
+    flake8
+    flake8-bugbear
+    flake8-tidy-imports
+    flake8-import-order
+    flake8-black
+    #pep8-naming
+commands = flake8 {{ cookiecutter.package_name }} tests
 
