add requirements file

--- a/{{cookiecutter.package_name}}/tox.ini
+++ b/{{cookiecutter.package_name}}/tox.ini
@@ -2,14 +2,11 @@
 envlist = py36,py37,py38,py39,py310,coverage,flake8
 
 [testenv]
-commands = pytest {{ cookiecutter.package_name }}
-deps =
-  pytest
+commands = pytest tests
+deps = -rrequirements-dev.txt
 
 [testenv:coverage]
-deps = 
-  pytest
-  coverage
+deps = -rrequirements-dev.txt
 commands = 
   coverage run --source={{ cookiecutter.package_name }} -m pytest tests
   coverage report
@@ -21,12 +18,5 @@ accept-encodings = utf-8
 #ignore = E302,I201
 
 [testenv:flake8]
-deps =
-    flake8
-    flake8-bugbear
-    flake8-tidy-imports
-    flake8-import-order
-    flake8-black
-    #pep8-naming
+deps = -rrequirements-flake8.txt
 commands = flake8 {{ cookiecutter.package_name }} tests
-
