--- a/{{cookiecutter.package_name}}/justfile
+++ b/{{cookiecutter.package_name}}/justfile
@@ -11,3 +11,14 @@ setuptest directory="/tmp/venv":
   python -m venv "{{directory}}"
   "{{directory}}/bin/pip3" install -e .
   echo "use: source {{directory}}/bin/active to test with python"
+
+
+setuptest-dev directory="/tmp/venv":
+  #!/usr/bin/env sh
+  python -m venv "{{directory}}"
+  "{{directory}}/bin/pip3" install -e .
+  "{{directory}}/bin/pip3" install -r requirements-dev.txt
+  "{{directory}}/bin/pip3" install -r requirements-flake8.txt
+  echo "use: source {{directory}}/bin/active to test with python"
+
+
