fix some stuff for src in src subdirectory

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -19,4 +19,4 @@ accept-encodings = utf-8
 
 [testenv:flake8]
 deps = -rrequirements-flake8.txt
-commands = flake8 {{ cookiecutter.package_name }} tests
+commands = flake8 src/{{ cookiecutter.package_name }} tests
