--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -2,7 +2,7 @@
 envlist = py36,py37,py38,py39,py310,coverage,flake8
 
 [testenv]
-commands = pytest tests
+commands = pytest tests {posargs}
 deps = -rrequirements-dev.txt
 
 [testenv:coverage]
