--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -4,6 +4,9 @@ envlist = py36,py37,py38,py39,py310,coverage,flake8
 [testenv]
 commands = pytest tests {posargs}
 deps = -rrequirements-dev.txt
+#setenv =
+#    PIP_CONFIG_FILE="$HOME/.pip/pip.conf.jenkins"
+
 
 [testenv:coverage]
 deps = -rrequirements-dev.txt
