--- a/{{cookiecutter.project_name}}/justfile
+++ b/{{cookiecutter.project_name}}/justfile
@@ -42,24 +42,33 @@ build:
   export PKG_NAME="$(python setup.py --name)"
   export PKG_VERSION="$(python setup.py --version)"
   export PKG_FILE="dist/${PKG_NAME}-${PKG_VERSION}.tar.gz"
-  if ! grep "^### ${PKG_VERSION}:" "CHANGELOG.md"; then
-    echo "Missing: ### ${PKG_VERSION}: in CHANGELOG.md"
+  if ! grep "^- ${PKG_VERSION}:" "CHANGELOG.md"; then
+    echo "Missing: - ${PKG_VERSION}: in CHANGELOG.md"
     exit 1
   fi
 
+  # if the package allready exists then juist stop
   echo ">>$PKG_FILE<<"
   if test -f "$PKG_FILE"; then
    echo "$PKG_FILE allready exists..."
    exit 1
   fi
 
-  echo "continue"
+  # make sure that everything is pushed to git before building
+  if ! git status | grep -q 'working tree clean'; then
+    echo "please commit all changes first in git."
+    git status
+    exit 1
+  fi
+
+  echo "checking code using tox before building."
   if ! tox -p; then
     echo "tox error."
     exit 1
   fi
 
-  python setup.py sdist
+  # build and add git tab
+  python setup.py sdist && git tag "v${PKG_VERSION}" HEAD
 
 # publish package to pypi (build first)
 publish:
