--- a/{{cookiecutter.project_name}}/justfile
+++ b/{{cookiecutter.project_name}}/justfile
@@ -85,5 +85,5 @@ pytest-failure:
 # bump version number
 bumppatch:
   #!/usr/bin/env sh
-  bumpversion --verbose patch
+  bumpversion --allow-dirty --verbose patch
 
