--- a/{{cookiecutter.project_name}}/justfile
+++ b/{{cookiecutter.project_name}}/justfile
@@ -77,7 +77,14 @@ build:
   fi
 
   # build and add git tab
-  python setup.py sdist && git tag "v${PKG_VERSION}" HEAD
+  python setup.py sdist || exit 1
+  if ! twine check "$PKG_FILE"; then
+    rm "$PKG_FILE"
+    exit 1
+  fi
+
+  git tag "v${PKG_VERSION}" HEAD && git push -u origin --tags
+
 
 # publish package to pypi (build first)
 publish:
