--- a/{{cookiecutter.project_name}}/requirements-flake8.txt
+++ b/{{cookiecutter.project_name}}/requirements-flake8.txt
@@ -4,6 +4,7 @@ flake8-tidy-imports
 flake8-import-order
 flake8-black
 flake8-docstrings
+flake8-functions
 flake8-blind-except
 black==21.12b0
 dlint
