--- a/{{cookiecutter.project_name}}/justfile
+++ b/{{cookiecutter.project_name}}/justfile
@@ -97,7 +97,8 @@ publish:
   export PKG_FILE="dist/${PKG_NAME}-${PKG_VERSION}.tar.gz"
   twine upload -r pypi "$PKG_FILE" && gh release create "v${PKG_VERSION}" "$PKG_FILE" -F CHANGELOG.md
 
-  # twine upload dist/*
+publish_docker:
+  docker buildx build --platform linux/arm64,linux/amd64 --tag rdevos72/{{ cookiecutter.project_name }}:latest --tag rdevos72/{{ cookiecutter.project_name }}:$PKG_VERSION --push .
 
 pytest-failure:
   tox -e py310 -- --lf --trace
